// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings renders tabs correctly general 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Settings
  </Connect(ShipHead)>
  <Base>
    <Base>
      <Base
        maxWidth={992}
      >
        <_default
          linkAsPrefix="/apps/some-app/settings/"
          linkHrefPrefix="/settings?appSlug=some-app&selectedTab="
          selectedTab="general"
          tabs={
            Array [
              Object {
                "label": "general",
              },
              Object {
                "label": "notifications",
              },
            ]
          }
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Flex
        direction="vertical"
        grow={true}
        maxWidth={992}
        paddingHorizontal="x4"
        paddingVertical="x4"
      >
        <Connect(GeneralSettings)
          appSlug="some-app"
        />
        <AddonFooter
          addonName="Ship"
          paddingVertical="x16"
        />
      </Flex>
    </Base>
  </Base>
</Fragment>
`;

exports[`Settings renders tabs correctly notifications 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Notifications
  </Connect(ShipHead)>
  <Base>
    <Base>
      <Base
        maxWidth={992}
      >
        <_default
          linkAsPrefix="/apps/some-app/settings/"
          linkHrefPrefix="/settings?appSlug=some-app&selectedTab="
          selectedTab="notifications"
          tabs={
            Array [
              Object {
                "label": "general",
              },
              Object {
                "label": "notifications",
              },
            ]
          }
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Flex
        direction="vertical"
        grow={true}
        maxWidth={992}
        paddingHorizontal="x4"
        paddingVertical="x4"
      >
        <Connect(NotificationSettings)
          appSlug="some-app"
        />
        <AddonFooter
          addonName="Ship"
          paddingVertical="x16"
        />
      </Flex>
    </Base>
  </Base>
</Fragment>
`;

exports[`Settings renders tabs correctly other 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Notifications
  </Connect(ShipHead)>
  <Base>
    <Base>
      <Base
        maxWidth={992}
      >
        <_default
          linkAsPrefix="/apps/some-app/settings/"
          linkHrefPrefix="/settings?appSlug=some-app&selectedTab="
          selectedTab="other"
          tabs={
            Array [
              Object {
                "label": "general",
              },
              Object {
                "label": "notifications",
              },
            ]
          }
        />
      </Base>
      <Divider
        color="gray-2"
        direction="horizontal"
        width="1px"
      />
      <Flex
        direction="vertical"
        grow={true}
        maxWidth={992}
        paddingHorizontal="x4"
        paddingVertical="x4"
      >
        <h1>
          other
        </h1>
        <AddonFooter
          addonName="Ship"
          paddingVertical="x16"
        />
      </Flex>
    </Base>
  </Base>
</Fragment>
`;
